modules/gdscript/tests/scripts/analyzer/errors/cyclic_ref_external.gd
func test():
	print(v)

var v = A.v

const A = preload("cyclic_ref_external_a.notest.gd")
